--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
     "react-native-sound": "^0.11.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-swipe-list-view": "^3.2.8",
     "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.1",
